@@ -1,8 +1,12 @@
 
 Changes in Version 0.6-5 (in development)
 
+ o added a convenience function ulayer() with default under = TRUE.
+
+ o improved handling of colours in panel.xblocks().
+   Added several more examples to the help page.
+
  o fixed panel.xblocks() to handle cases of no missing data.
-   Added example of using panel.xblocks to highlight ts gaps.
 
 Changes in Version 0.6-4
 
